# StructBioReasoner

./: .env.example  .gitignore  .openclaw.json  BINDER_DESIGN_IMPLEMENTATION_CHECKLIST.md  COMPREHENSIVE_TEST_RESULTS.md  GITHUB_SETUP.md  LICENSE  README.md  README_ADVANCED_DOMAIN_DETECTION.md  README_AGENTIC_SIMULATION.md  README_OLD.md  README_PAPER2AGENT.md  README_PHASE3_PAPER2AGENT.md  UBIQUITIN_PAPER2AGENT_DEMO_REPORT.md  WORKFLOW_ANALYSIS_REPORT.md  binder_design_reasoner.py  cleanup_job.sh  make_agent_env.sh  phase3_demo_results.json  prompts.md  pyproject.toml  requirements-jnana.txt  requirements-protognosis.txt  requirements.txt  run.sh  setup_openclaw.sh  struct_bio_reasoner.py  test  test.err
component-tests/: README.md
config/: binder_config.yaml  config.yaml  derf21_config.yaml  hierarchical_workflow_config.yaml  jnana_config.yaml  nmnat2_openclaw_config.yaml  protein_config.example.yaml  protein_config.yaml  test_binder_config.yaml  test_jnana_config.yaml
docs/: COMPREHENSIVE_TOOL_INTEGRATION.md  GPU_USAGE_GUIDE.md  HPC_DEPLOYMENT.md  HPC_DEPLOYMENT_CHECKLIST.md  HPC_DEPLOYMENT_SUMMARY.md  HPC_QUICK_START.md  MDAGENT_ASYNC_CONTEXT_FIX.md  MDAGENT_INTEGRATION_GUIDE.md  MDAGENT_INTEGRATION_PLAN.md  MDAGENT_INTEGRATION_SUMMARY.md  MDAGENT_SETUP.md  NO_BIOMNI_SETUP.md  OPENCLAW_AKV_CHANGES.md  OPENMM_INTEGRATION_GUIDE.md  OPENMM_INTEGRATION_SUMMARY.md  PYMOL_INTEGRATION_GUIDE.md  UBIQUITIN_THERMOSTABILITY_RESULTS.md  USAGE_GUIDE.md  agentic_thermostability_analysis.md  data_flow_and_db_migration_report.md  multi_community_agentic_system.md  paper2agent_integration_guide.md  phase3_paper2agent_system.md  role_based_agentic_system.md
domain_detection_demo_results/: domain_detection_demo_results.json
env_files/: make_agent_env.sh  requirements-paper2agent.txt  requirements_minimal.txt
examples/: advanced_domain_detection_system.py  bindcraft_example.py  binder_design_example.md  comprehensive_multi_tool_analysis.py  conservation_agent_example.py  derf21_openclaw_binder_design.py  display_multi_community_results.py  display_paper2agent_results.py  display_simulation_results.py  domain_detection_demo.py  example_full_pipeline.py  example_llm_integration.py  example_profiling.py  example_tool_calling.py  example_tool_vs_explicit.py  example_two_step_tool_calling.py  hierarchical_binder_workflow.py  iterative_thermostability_simulation.py  mcp_enhanced_protein_analysis.py  mdagent_integration_example.py  multi_community_thermostability_optimization.py  nmnat2_agentic_binder_workflow.py  nmnat2_binder_design.py  nmnat2_binder_design_workflow.py  nmnat2_openclaw_binder_design.py  openmm_thermostability_analysis.py  paper2agent_domain_tools_generator.py  paper2agent_enhanced_simulation.py  phase3_paper2agent_demo.py  pymol_protein_visualization.py  role_based_protein_engineering.py  run_nmnat2_workflow.py  test_gptoss120.py  test_gpu_simulation.py  test_hierarchical_workflow.py  test_hiper_rag.py  test_mcp_integration.py  ubiquitin_comprehensive_analysis.py  ubiquitin_comprehensive_thermostability_analysis.py  ubiquitin_mcp_enhanced_thermostability_analysis.py  (+2 more)
logs/: test
paper2agent_domain_tools_results/: paper2agent_domain_tools_results.json
paper2agent_simulation_results/: paper2agent_simulation_report.md  simulation_data.json
readmes/: AGENTIC_LOOP_IMPLEMENTATION_NOTES.md  AGENTIC_LOOP_IMPROVEMENTS_SUMMARY.md  ANSWER_TO_YOUR_QUESTION.md  API_KEY_OPTIONS.md  BINDER_DATA_FLOW_FIX.md  BINDER_DESIGN_WORKFLOW.html  BINDER_JNANA_CHANGES_SUMMARY.md  FIX_SUMMARY.md  (+43 more)
(+226 files in other folders)
